# django-playground

./: pyproject.toml
tweets/config/: settings.py  urls.py
tweets/date/: models.py
tweets/like/: admin.py  models.py
tweets/like/migrations/: 0001_initial.py  0002_alter_like_created_at_alter_like_updated_at.py  0003_alter_like_created_at_alter_like_updated_at.py  0004_alter_like_created_at_alter_like_updated_at.py
tweets/tweet/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tweets/tweet/migrations/: 0001_initial.py  0002_alter_tweet_created_at_alter_tweet_updated_at.py  0002_initial.py  0003_alter_like_tweet_alter_like_user_alter_tweet_user.py  0003_alter_tweet_user.py  0004_like.py
tweets/tweet/templates/: all_tweets.html
tweets/users/: admin.py  models.py  serializers.py  urls.py  views.py
tweets/users/migrations/: 0001_initial.py  0002_remove_user_currency_remove_user_is_host_and_more.py  0003_alter_user_name.py
